--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ip": "^1.1.8",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
     "oracledb": "^6.0.0",
     "sequelize": "^6.32.0"
