--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "ip": "^1.1.8",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.4.0",
     "nodemon": "^2.0.22",
     "oracledb": "^6.0.0",
     "sequelize": "^6.32.0"
